<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tc.oc</groupId>
  <artifactId>PGMBingo</artifactId>
  <version>1.0.1-SNAPSHOT</version>
  <name>PGMBingo</name>
  <scm>
    <connection>scm:git:git://github.com/OvercastCommunity/Bingo.git</connection>
    <developerConnection>scm:git://github.com/OvercastCommunity/Bingo.git</developerConnection>
    <url>https://github.com/OvercastCommunity/Bingo</url>
  </scm>
  <repositories>
    <repository>
      <id>aikar</id>
      <url>https://repo.aikar.co/content/groups/aikar/</url>
    </repository>
    <repository> <!-- Working repo for PGM and Sportpaper -->
      <id>pgm.fyi</id>
      <url>https://repo.pgm.fyi/snapshots</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>app.ashcon</groupId>
      <artifactId>sportpaper</artifactId>
      <version>1.8.8-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>tc.oc.pgm</groupId>
      <artifactId>core</artifactId>
      <version>0.16-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>co.aikar</groupId>
      <artifactId>acf-bukkit</artifactId>
      <version>0.5.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>tc.oc.occ</groupId>
      <artifactId>Dispense</artifactId>
      <version>1.0.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.30</version>
      <scope>provided</scope>
    </dependency>
    <!-- Database API -->
    <dependency>
      <groupId>tc.oc.occ</groupId>
      <artifactId>Database</artifactId>
      <version>1.2.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <!-- GUI API -->
    <dependency>
      <groupId>fr.minuskube.inv</groupId>
      <artifactId>smart-invs</artifactId>
      <version>1.2.7</version>
    </dependency>
    <!-- Annotations  -->
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>22.0.0</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.3</version>
        <configuration>
          <createDependencyReducedPom>true</createDependencyReducedPom>
          <minimizeJar>true</minimizeJar>
          <artifactSet>
            <includes>
              <include>co.aikar:*:*</include>
              <include>fr.mrmicky:*:*</include>
            </includes>
          </artifactSet>
          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/**</exclude>
              </excludes>
            </filter>
          </filters>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- Exposes git information to the build environment -->
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>4.9.10</version>
        <executions>
          <execution>
            <goals>
              <goal>revision</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <failOnNoGitDirectory>false</failOnNoGitDirectory>
          <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
        </configuration>
      </plugin>
      <!-- Validates that code is properly formatted with Google's code style -->
      <plugin>
        <groupId>com.spotify.fmt</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
        <version>2.23</version>
        <configuration>
          <style>google</style>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <filtering>true</filtering>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
  </build>
</project>